--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head><meta charset="utf-8" />
-<title>metal_bands</title><script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
+<title>metal_bands-Copy1</title><script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
 
 <style type="text/css">
@@ -11775,6 +11775,7 @@ div#notebook {
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
+<p><a id="TOP"></a></p>
 <h1 id="CMSC320-FINAL-PROJECT">CMSC320 FINAL PROJECT<a class="anchor-link" href="#CMSC320-FINAL-PROJECT">&#182;</a></h1><h2 id="Metal-Bands-Around-The-World">Metal Bands Around The World<a class="anchor-link" href="#Metal-Bands-Around-The-World">&#182;</a></h2><h5>Name: Yan-Jen Lo &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;UID: 114204813 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Due Date: 12/16/17 @ 1:30 PM</h5>
 <hr>
 <h3 id="INTERACTIVE-MENU:-\m/--(---_----)--\m/">INTERACTIVE MENU: \m/  (  -_-   )  \m/<a class="anchor-link" href="#INTERACTIVE-MENU:-\m/--(---_----)--\m/">&#182;</a></h3><ul style="list-style-type:none">
@@ -11792,7 +11793,7 @@ div#notebook {
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p><img src="introphoto.jpg" alt="title"></p>
+<p><img src="metal_music_project/introphoto.jpg" alt="title"></p>
 
 </div>
 </div>
@@ -65009,7 +65010,8 @@ With the map layers, we answer our 2nd question.
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-
+<hr>
+<h2 id="\m/-(----)-\m/-BACK-TO-TOP-\m/-(----)-\m/"><a href="#TOP">\m/ ( -<em>- ) \m/ BACK TO TOP \m/ ( -</em>- ) \m/</a><a class="anchor-link" href="#\m/-(----)-\m/-BACK-TO-TOP-\m/-(----)-\m/">&#182;</a></h2>
 </div>
 </div>
 </div>
