--- a/index.html
+++ b/index.html
@@ -65003,7 +65003,7 @@ Let's apply all of the python techiques to create a <code><b>DataFrame</b></code
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <p><code><b>folium</b></code> has a built in <code><b>choropleth</b></code> function. Because I have to graph 3 of them, I made a function and I had them all added in as layers. Because the map is so tasking on the computer, saving it as an html file is a good option if your computer can't handle the large amount of graphics.</p>
-<p>View the full map <a href="metalband_choropleth_map.html">here</a></p>
+<p>View the full map <a href="metalband_choropleth_map.zip/metalband_choropleth_map.html">here</a></p>
 <p>With the map layers, we answer our 2nd question.
 <a name="Q2AC">
   <div id="Q2AC">
