--- a/index.html
+++ b/index.html
@@ -12436,7 +12436,7 @@ If the request was successful and a connection was created, the response should 
   <li>If the country has more than 500 bands total, they are displayed by page number in batches of 500.</li>
   <li>If you try to scrap the same website a lot, most websites can detect it, and thus disconnect your HTTP connection.</li>
 </ol>
-<img src='inspectelement.jpg'></p>
+<img src='inspectelementie.jpg'></p>
 <h4 id="Sources-Used:">Sources Used:<a class="anchor-link" href="#Sources-Used:">&#182;</a></h4><p>1) Source for deriving solutions to #1 and #2: <a href="https://github.com/jonchar/ma-scraper">jonchar</a> on <b>GitHub</b> wrote his own <a href="https://github.com/jonchar/ma-scraper/blob/master/MA_band_scraper.py">scraper</a> for the <b>Encyclopedia Metallum</b>.</p>
 <p>2) Solution to number #3 was from this <a href="https://stackoverflow.com/questions/27652543/how-to-use-python-requests-to-fake-a-browser-visit">Stack Overflow post</a> and links to HTTP headers are <a href="http://www.useragentstring.com/pages/useragentstring.php">here</a>.</p>
 <h4 id="Solution-to-Problem-#1:-AJAX-Call-With-HTTP-Requests">Solution to Problem #1: AJAX Call With HTTP Requests<a class="anchor-link" href="#Solution-to-Problem-#1:-AJAX-Call-With-HTTP-Requests">&#182;</a></h4><p>You can see the <code><b>JavaScript</b></code> command to the <b>AJAX Databse</b>  (this is where all their data on bands is stored). To specify which country you want to see, you simply put in the country's ID number, which we have extracted earlier.</p>
