--- a/index.html
+++ b/index.html
@@ -13945,20 +13945,20 @@ Vietnam (VN): SUCCESS [39]
 </a></p>
 <h1 id="Part-II:-Data-Analysis-&amp;-Visualization">Part II: Data Analysis &amp; Visualization<a class="anchor-link" href="#Part-II:-Data-Analysis-&amp;-Visualization">&#182;</a></h1><hr>
 <ul style="list-style-type:none">
-  <li><Big><b><a href="#C">Genre Analysis</a></b></Big></li>
+  <li><Big><b><a href="#C">Genre Analysis</a></b></Big>
       <ul style="list-style-type:disc">
           <li><b><a href="#C1">Tranform DataFrame for Genre Analysis</a></b></li>
           <li><b><a href="#C2">Overall Genre Counts</a></b></li>
           <li><b><a href="#C3">Genre Count Bar Graph</a></b></li>
           <li><b><a href="#C4">Country Genre Counts</a></b></li>
           <li><b><a href="#C5">Genre by Country Plots</a></b></li>
-      </ul>
+      </ul></li>
       &nbsp;
-  <li><Big><b><a href="#D">Top Metal Countries</a></b></Big></li>
+  <li><Big><b><a href="#D">Top Metal Countries</a></b></Big>
       <ul style="list-style-type:disc">
           <li><b><a href="#D1">Calculating Per Capita</a></b></li>
           <li><b><a href="#D2">Metal Choropleth Map</a></b></li>
-      </ul>
+      </ul></li>
 </ul>
 </div>
 </div>
