--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head><meta charset="utf-8" />
-<title>metal_bands-Copy1</title><script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
+<title>metal_bands-Copy3</title><script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
 
 <style type="text/css">
@@ -12435,7 +12435,23 @@ If the request was successful and a connection was created, the response should 
   <li>If you try to <code><b>BeautifulSoup</b></code> the HTML code, you won't see any of the listed bands because the webpage is a <code><b>JavaScript</b></code> rendered webpage. As you can see with the inspect element I captured through <b>Internet Explorer (IE)</b>.</li>
   <li>If the country has more than 500 bands total, they are displayed by page number in batches of 500.</li>
   <li>If you try to scrap the same website a lot, most websites can detect it, and thus disconnect your HTTP connection.</li>
-</ol><p><img src='inspectelementie.jpg'></p>
+</ol>
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<p><img src='inspectelementie.jpg'></p>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
 <h4 id="Sources-Used:">Sources Used:<a class="anchor-link" href="#Sources-Used:">&#182;</a></h4><p>1) Source for deriving solutions to #1 and #2: <a href="https://github.com/jonchar/ma-scraper">jonchar</a> on <b>GitHub</b> wrote his own <a href="https://github.com/jonchar/ma-scraper/blob/master/MA_band_scraper.py">scraper</a> for the <b>Encyclopedia Metallum</b>.</p>
 <p>2) Solution to number #3 was from this <a href="https://stackoverflow.com/questions/27652543/how-to-use-python-requests-to-fake-a-browser-visit">Stack Overflow post</a> and links to HTTP headers are <a href="http://www.useragentstring.com/pages/useragentstring.php">here</a>.</p>
 <h4 id="Solution-to-Problem-#1:-AJAX-Call-With-HTTP-Requests">Solution to Problem #1: AJAX Call With HTTP Requests<a class="anchor-link" href="#Solution-to-Problem-#1:-AJAX-Call-With-HTTP-Requests">&#182;</a></h4><p>You can see the <code><b>JavaScript</b></code> command to the <b>AJAX Databse</b>  (this is where all their data on bands is stored). To specify which country you want to see, you simply put in the country's ID number, which we have extracted earlier.</p>
@@ -14024,14 +14040,30 @@ Successfully installed branca-0.2.0 folium-0.5.0
   </div>
 </a></p>
 <h2 id="Genre-Analysis">Genre Analysis<a class="anchor-link" href="#Genre-Analysis">&#182;</a></h2><hr>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
 <p><img src='genregroups.jpg'></p>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
 <h3 id="Answers-Question-#1:">Answers Question #1:<a class="anchor-link" href="#Answers-Question-#1:">&#182;</a></h3><ul style="list-style-type:none">
   <li><b>Which genre type seems to dominate the metal playing field?</b>
        <ul type="list-style-type:square">
           <li><a href="#Q1A">For the metal genre in general</a></li>
           <li><a href="#Q1B">For each country</a></li>
           <li><a href="#Q1C">Are most genres mixed or pure?</a></li>
-      </ul></li>
+       </ul></li>
 </ul>
 </div>
 </div>
