--- a/index.html
+++ b/index.html
@@ -12430,7 +12430,7 @@ If the request was successful and a connection was created, the response should 
   </div>
 </a></p>
 <h3 id="Query-All-Countries-With-HTTP-Request">Query All Countries With HTTP Request<a class="anchor-link" href="#Query-All-Countries-With-HTTP-Request">&#182;</a></h3><p>This part is somewhat complex because of the way the <b>Encyclopedia Metallum</b> is made. When you click on a country, you will see all the bands for that specific country.
-<img src='countrypage.jpg'></p>
+<img src='countrypages.JPG'></p>
 <h4 id="Here-are-the-3-main-difficulties-with-scraping-this-part-of-the-database:">Here are the 3 main difficulties with scraping this part of the database:<a class="anchor-link" href="#Here-are-the-3-main-difficulties-with-scraping-this-part-of-the-database:">&#182;</a></h4><ol type="1">
   <li>If you try to <code><b>BeautifulSoup</b></code> the HTML code, you won't see any of the listed bands because the webpage is a <code><b>JavaScript</b></code> rendered webpage. As you can see with the inspect element I captured through <b>Internet Explorer (IE)</b>.</li>
   <li>If the country has more than 500 bands total, they are displayed by page number in batches of 500.</li>
@@ -14048,7 +14048,7 @@ Successfully installed branca-0.2.0 folium-0.5.0
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p><img src='genregroups.jpg'></p>
+<p><img src='genregroups.JPG'></p>
 
 </div>
 </div>
