--- a/index.html
+++ b/index.html
@@ -11889,7 +11889,7 @@ I opted for <b>Wikipedia</b> since most of their population information was base
 </a></p>
 <h1 id="PART-I:-Web-Scrapping">PART I: Web Scrapping<a class="anchor-link" href="#PART-I:-Web-Scrapping">&#182;</a></h1><hr>
 <ul style="list-style-type:none">
-  <li><Big><b>[Scrape All Countries](#A)</b></Big></li>
+  <li><Big><b><a href="#A">Scrape All Countries</a></b></Big></li>
       <ul style="list-style-type:disc">
           <li><b><a href="#A1">HTTP Request</a></b></li>
           <li><b><a href="#A2">BeautifulSoup</a></b></li>
@@ -11898,7 +11898,7 @@ I opted for <b>Wikipedia</b> since most of their population information was base
           <li><b><a href="#A5">Load In Our TSV</a></b></li>
       </ul>
       &nbsp;
-  <li><Big><b>[Scrape Population Data](#B)</b></Big></li>
+  <li><Big><b><a href="#B">Scrape Population Data</a></b></Big></li>
       <ul style="list-style-type:disc">
           <li><b><a href="#B1">Wikipedia HTML</a></b></li>
           <li><b><a href="#B2">Load In Population CSV</a></b></li>
