--- a/index.html
+++ b/index.html
@@ -63722,15 +63722,14 @@ LyIiYhIKfREREZP4fwWo/Ax068ThAAAAAElFTkSuQmCC
   </div>
 </a></p>
 <h2 id="Top-Metal-Countries">Top Metal Countries<a class="anchor-link" href="#Top-Metal-Countries">&#182;</a></h2><hr>
-<h3 id="Answers-Question-#2:">Answers Question #2:<a class="anchor-link" href="#Answers-Question-#2:">&#182;</a></h3><p><ul style="list-style-type:none">
-  <li><b>Which country is the most metal?</b>
+<h3 id="Answers-Question-#2:">Answers Question #2:<a class="anchor-link" href="#Answers-Question-#2:">&#182;</a></h3><ul style="list-style-type:none">
+  <li><b>Which country is the most metal?</b></li>
       <ul type="list-style-type:square">
           <li><a href="#Q2AC">Most metal bands in proportion to population</a></li>
           <li><a href="#Q2AC">Most still active metal bands in proportion to population</a></li>
           <li><a href="#Q2AC">Most split-up metal bands in proportion to population</a></li>
-      </ul>&lt;/li&gt;
-&lt;/ul&gt;
-Let's apply all of the python techiques to create a <code><b>DataFrame</b></code> for the status types for every country.</p>
+      </ul>
+</ul><p>Let's apply all of the python techiques to create a <code><b>DataFrame</b></code> for the status types for every country.</p>
 
 </div>
 </div>
