--- a/index.html
+++ b/index.html
@@ -11829,7 +11829,7 @@ The dataset had only 5000 metal bands and the world population data didn't go up
   </tr>
   <tr>
     <td><b>Wikipedia</b></td>
-    <td><a href="https://en.wikipedia.org/wiki/List_of_countries_and_dependencies_by_population2017">Population Data</a></td>
+    <td><a href="https://en.wikipedia.org/wiki/List_of_countries_and_dependencies_by_population">Population Data</a></td>
     <td>240 Countries</td>
     <td>12/15/17</td>
   </tr>
@@ -65114,7 +65114,7 @@ LyIiYhIKfREREZP4fwWo/Ax068ThAAAAAElFTkSuQmCC
     <li><Big><b>Data Sources</b></Big>
         <ul style="list-style-type:disc">
             <li><a href="http://metal-archives.com">Encyclopedia Metallum</a></li>
-            <li><a href="https://github.com/datasets/geo-countries/tree/master/data">Wikipedia Population Data</a></li>
+            <li><a href="https://en.wikipedia.org/wiki/List_of_countries_and_dependencies_by_population">Wikipedia Population Data</a></li>
             <li><a href="https://github.com/datasets/geo-countries/tree/master/data">World GEOJSON</a></li>
         </ul>
     </li>
